@@ -1,4 +1,6 @@
 DIST batctl-2015.0.tar.gz 58676 SHA256 634d91189f96bda6d4ce6179dce90ad578566f29d3111b49d6e775d4f3591f04 SHA512 07539b7ba68a1dc660f729850701b703344085a0361a294ba9feb1a89c38c0bec5774625508df307f28f3562d50bf1cd185e221673fc1d0a8c420e0953f579ea WHIRLPOOL 64b48434c5b88e970d376a0604a3ee7b6b1c69cc1ad8d07fdb87f8ffb2e73568bd9039c3757181161a46da89c1ae8bfbddbcc554bd24befb73853072119aa55e
+DIST batctl-2015.2.tar.gz 59210 SHA256 b14d2abf9ff9f62561eacc972ab20fe16ceb8360070dfa2a1995c545c08869fb SHA512 1094667fea9edf3ad22e4c15b28a1796d0750f4161b31edd68e1aa1031374d44e832c3363314a11627c90f0c2cc039f113ef6fc8f0319668fffef9dc28b1848c WHIRLPOOL 94923bc2307b7220f74104d2051754065836ad5a5146a87536f8c651edea1dec03925242eed507b1984b2d1185abd7ea5d36d616e96bed782285dfd957e30ec3
 EBUILD batctl-2015.0.ebuild 885 SHA256 130f9f0cb554080e4d86cfe9b862280bad924e2bc0a306027d50da172b0f0f95 SHA512 ddf4c02d705022e6d8ff157eb9b2e89bc5aac20c8532a9751282992490b2c58c3421f8a4d9ed9ec13b27ede1f259c2786ae10a42879f6f0f23a40978ff607622 WHIRLPOOL 74bfdb96e903633e5d0bb926d1882cf593b9a7b3da52c32b5ffb117531058c3bfa71e3e3a7fa41d68badc72de5542ccd6521464206f5e579cbbc9023cc89be69
-MISC ChangeLog 138 SHA256 f068838238490e25679b512a037f9741357ba113c515b3bc29777dfc2c00f42f SHA512 a53b7a8c2581964ccd2b116359902d2c98775b4e58a870e7a78ee52cbdf370873e57c04d61d5b76c7f8d01b68952194e8d4a9da28af914495b0c01aa65694015 WHIRLPOOL d606169fe8267070ba9cfa8dd405bf8aa751eee689468813cb53096fa93c894c536d14aa649c32f93979a927f321e6dc141cb0eb698f198024a3b812934bec9e
-MISC metadata.xml 232 SHA256 72823fe01f36136beb6f6e3b68e968f4a0be732e25f8523f8e4e92f94ecb811b SHA512 136ec8897ff4962e002f3f748ad969b018539792377b38aa2529be57840610368e5b9d3dd5ec62897a0cd4c40e7885d52063174bb10357b84af6b0fefae4c6c3 WHIRLPOOL 8b4f65484ac78cd033a1b7e7db727bdf689823b3c8bb095dafd2579cf7e273431d7c7b9e523db73c086642876946b5edf56af744bd92942e5cb3d7acc8aa6a0c
+EBUILD batctl-2015.2.ebuild 885 SHA256 28613fdd0e9f933254c2879a5b02afed3a212e6fa5f889fbdb3ad3703e7daba8 SHA512 e0da315bb6c5bdd0e9027dc7a0dc4e4fb2f6296539ac94705073a8dd774f0466106a4c83e47aa84593afcc694a93d90757912dd884358a5c38646bc0be8add62 WHIRLPOOL 659e0770e02166c711562d3dce568a04c231a4d9b66fc0f5eb7d6a81faa347543bb7a7b085d684645d149401b6e16635e389fc60b25dadb58d4e673e68714daf
+MISC ChangeLog 282 SHA256 3886fd6178a059ca2060892aa54c58182f5278306e41deb4d5cca442626564f7 SHA512 50ece21e09d4ce30950ff229180e3829ebb6baf896a09eccc97c0d823064e05cff2c3dc0dc421302eb630315d89589cb74d8f1e910a8d406caba221192198131 WHIRLPOOL 31a3b613b85bf883c5460d62f5f556da4297881ae6bb99505450dfd934a3a80a83a88856efbe13a5b246e8d897dcbed3f208b5385e9948a4ca3a7cecca341464
+MISC metadata.xml 246 SHA256 f0fd68f327c1f5958a17f992dacc0d86ba868c6c9585630f214afb76c4edea86 SHA512 9d2e845bbf9bc26fe93b554e85f1bf56e3655abf8e36fece55052d3e5e8a71486957617724300a449971f2ec9fb32c7db776dfc4409295528a27bdb235a6bb3d WHIRLPOOL d47c7dea411ce0ec0df0e3d8168a1cc0a834fe686ff7f610ff614a22a6e5ee554613d9a6e83fca221cead44876f2a91b15603a2fe6dad07661612b85f533fa86
