@@ -1,3 +1,8 @@
+*batctl-2015.2 (16 Oct 2016)
+
+  16 Oct 2016;  <bene@gentoo.org> +batctl-2015.2.ebuild, metadata.xml:
+  net-misc/batctl: version bump to 2015.2
+
 *batctl-2015.0 (29 Aug 2015)
 
   29 Aug 2015;  <bene@gentoo.org> +batctl-2015.0.ebuild, +metadata.xml:
